--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="cap"></div>
         <div class="sleeve"></div>
       </div>
-      <div class="marker green">
+      <div class="marker green1">
         <div class="cap"></div>
         <div class="sleeve"></div>
       </div>
